Add exploratory data

--- a/Glassdoor_data_cleaning.ipynb
+++ b/Glassdoor_data_cleaning.ipynb
@@ -3149,12 +3149,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('clean_data.')"
+    "df.to_csv('clean_data.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.read_csv('clean_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
